Added a header element to index.html containing an avarar and avatar name. Created a header.css file. Styled the header to in accordance with the provided design. Added a transparent background image to the header to give it a textured look.

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -16,6 +16,8 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: absolute;
+  min-width: 100vw;
 }
 
 nav .navLogo {
