--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,3 +26,9 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+main {
+  width: 90%;
+  margin: 0 auto;
+  border: 2px solid blue;
+}
