fixed the nav bar to the top of the page

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -16,7 +16,8 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: absolute;
+  position: fixed;
+  top:0;
   min-width: 100vw;
 }
 
