--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,7 +7,7 @@ html {
   box-sizing: inherit;
 }
 
-header {
+header.pageHeader{
   display: flex;
   flex-direction: column;
   align-items: center;
