--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,11 +7,11 @@ html {
   box-sizing: inherit;
 }
 
-header.pageHeader{
+header.pageHeader {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 3px solid red;
+  /* border: 3px solid red; */
   height: 520px;
   justify-content: flex-end;
   background-color: #ffbf00;
