--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -12,12 +12,12 @@ nav {
   color: #ffffff;
   height: 120px;
   background-color: #4056a1;
-  padding: 0 1.5em; /* padding left and right 1.5em */
+  padding: 0 1.5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
-  top:0;
+  top: 0;
   min-width: 100vw;
 }
 
